--- a/Kontakt.html
+++ b/Kontakt.html
@@ -73,10 +73,10 @@
                 <input type="text" id="question" class="popunavanjeforme">
                 
                 <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="" data-size="">
-                  <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"><button id="Menjatemo">Share</button>
+                  <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"><button>Share</button>
                   </a></div>
-
-                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="false"><button id="Menjatemo">Like</button></div>
+                <br>
+                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="false"><button>Like</button></div>
     
                 <br><br>
                 <button type="button" id="prijava">Pošalji</button>
