--- a/Kontakt.html
+++ b/Kontakt.html
@@ -76,7 +76,7 @@
                   <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"><button>Share</button>
                   </a></div>
                 <br>
-                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="false"><button>Like</button></div>
+               <button> <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="false">Like</div></button>
     
                 <br><br>
                 <button type="button" id="prijava">Pošalji</button>
