--- a/Kontakt.html
+++ b/Kontakt.html
@@ -81,7 +81,7 @@
                   <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share
                  </a></div>
                 <br>
-               <button> <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="false">Like</div></button>
+               <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="false">Like</div>
     
                 <br><br>
                 <button type="button" id="prijava">Pošalji</button>
