--- a/Kontakt.html
+++ b/Kontakt.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content=" https://mihajloga.github.io/"/>
+    <meta property="og:url" content=" https://mihajloga.github.io/Kontakt.html"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Land line"/>
     <meta property="og:description" content="Dobrodošli u najbolju prodavnicu mobilnih telefona na celome svetu!"/>
-    <meta property="og:image" content=" https://mihajloga.github.io//Slike/mob tell.jpg/"/>
+    <meta property="og:image" content=" https://mihajloga.github.io/Kontakt.html/Slike/mob tell.jpg/"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="fav/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
